src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__arity.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/arity.lox
---
no args
1
3
6
10
15
21
28
36
