src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__empty_block.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/empty_block.lox
---
nil
