src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__extra_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/extra_arguments.lox
---
Runtime error: [ line 8 ] : Expected 2 arguments but got 4.
