src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__not_found.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/not_found.lox
---
Runtime error: [ line 3 ] : Undefined property 'unknown'.
