src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__print_bound_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/print_bound_method.lox
---
<fn "method">
