src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__refer_to_name.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/refer_to_name.lox
---
Runtime error: [ line 3 ] : Undefined variable 'method'.
