src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__too_many_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/too_many_arguments.lox
---
Syntax error(s):
[ line 259 ] : Can't have more than 255 arguments.
