src/interpreter/snapshots/rlox__interpreter__tests__interpreter@method__too_many_parameters.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/method/too_many_parameters.lox
---
Syntax error(s):
[ line 258 ] : Can't have more than 255 parameters.
